# learn-once

./: .gitignore  DEVELOPMENT.md  LICENSE  README.md  TODO.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: tauri-build-release.yml
public/: tasks.json
src/: App.tsx  AppOrig.tsx  AppRef.tsx  App_backup.tsx  data.tsx  index.css  main.tsx  sandbox.tsx  types.ts  util.ts
src-tauri/: Cargo.toml  db-shm  db-wal  tauri.conf.json  test.db  test.db-shm  test.db-wal
src-tauri/capabilities/: default.json
src-tauri/migrations/: 20240813213139_create_tables.sql  20240814162220_update_note_model.sql  20240827124551_add_session_model_update_card_model.sql  20241030150706_settings.sql  20241030182712_sample_setting.sql  20241030192759_update_note_model.sql
src-tauri/src/: database.rs  db.rs  db2.rs  lib.rs  main.rs  state.rs
src-tauri/src/app/: mod.rs
src-tauri/src/app/actions/: mod.rs
src-tauri/src/app/core/: bonsai_repository.rs  mod.rs  surreal_repository.rs
src-tauri/src/app/domain/: classifier.rs  classifier_service.rs  mod.rs
src-tauri/src/crud/: data.rs  mod.rs  tasks.rs
src-tauri/src/crud/models/: card.rs  mod.rs  note.rs  person.rs  ref.rs  session.rs  settings.rs  todo.rs
src-tauri/src/util/: db.rs
src/components/: ThemeSwitch.jsx  app-sidebar.tsx  menu.tsx  mode-toggle.tsx  nav-actions.tsx  nav-favorites.tsx  nav-main.tsx  nav.tsx  settings-drawer.tsx  sidebar-11.tsx  sidebar-111.tsx  sidebar-1111.tsx  sidebar-12.tsx  sidebar-13.tsx  team-switcher.tsx
website/: makefile
(+93 files in other folders)
