[package]
name = "learn-once"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "learn_once_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.0", features = ["runtime-tokio-native-tls", "sqlite"] }
#bonsaidb = { version = "*", features = ["local-full"] }
# deps
#ts-rs = "6"
#strum = "0.26"
#strum_macros = "0.26"
uuid = {version = "1", features = ["v4", "fast-rng"] }
#surrealdb = {version ="1.0.0-beta.9", features = ["kv-rocksdb"] }
tokio = { version = "1", features = ["full"] }
#async-trait = "0.1"
#futures = "0.3"
chrono = "0.4.38"
pulldown-cmark = "0.12.0"
regex = "1.10.6"
toml = "0.8.19"

#[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
#default = ["custom-protocol"]
#custom-protocol = ["tauri/custom-protocol"]
